fix contact page width scrollbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,7 @@
 /* layout */
+/* .container-fluid {
+  padding: 0;
+} */
 
 iframe {
   border: 0px;
@@ -46,6 +49,7 @@ table {
 .intro .row {
   border-bottom: none;
   margin-left: 3vw;
+  width: 80%;
 }
 
 .blockquote {
